tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_capturing_mut_var_as_param_to_impl_method/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Mutable variable foo captured in lambda must be a mutable reference
   ┌─ src/main.nr:14:20
   │
14 │         let f = || foo.mutate();
   │                    --- Use '&mut' instead of 'mut' to capture a mutable variable.
   │

Aborting due to 1 previous error
